<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Служебные данные -->
    <string name="app_package">ru.sergeykarleev.devicefinder</string>
    <string name="app_MainActivity">ru.sergeykarleev.devicefinder.MainActivity</string>    
    
    <string name="app_name">deviceFinder</string>    
    <string name="action_settings">Settings</string>
    
    <!-- Тексты экрана настроек -->
    <string name="title_code_callback">Кодовое слово:\nПерезвони мне</string>
    <string name="title_code_geo">Кодовое слово:\nСообщи координаты</string>

    <string name="title_phone_1">Доверенный\nтелефон №1</string>
    <string name="title_phone_2">Доверенный\nтелефон №2</string>
    <string name="title_phone_3">Доверенный\nтелефон №3</string>
    
    <string name="title_phone_hint">+7XXXxxxXXxx</string>
    
    <string name="button_save">Сохранить</string>
    <string name="button_exit">Выйти</string>
    
    <!-- Сообщения при сохраненнии настроек -->
    <string name="message_save_ok">Настройки сохранены</string>
    <string name="message_save_duplicate">Кодовые фразы должны различаться</string>
    <string name="message_save_error">Ошибка сохранения</string>
    
    <!-- Сообщения мониторинга смс -->
    <string name="monitor_empty_codes">Кодовые фразы не заданы</string>	
    <string name="monitor_empty_phones">Доверенные телефоны не обнаружены</string>	
    
</resources>
